fix: correct spacing for  bottom navigation back and forward

--- a/src/styles/blog-page.css
+++ b/src/styles/blog-page.css
@@ -1,4 +1,5 @@
 .blog-list {
+  padding-top: 60px;
   display: flex;
   flex-direction: column;
   align-content: center;
